[package]
name = "test-logger"
version = "0.1.0"
authors = ["Phil Fried <philipsfried@gmail.com>"]

documentation = "https://github.com/psFried/test-logger"
homepage = "https://github.com/psFried/test-logger"
repository = "https://github.com/psFried/test-logger"
readme = "README.md"
keywords = ["logging", "log", "env_logger", "tests", "unit test", "integration test"]
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "~0.3"

[dev-dependencies]
log = "*"

