[package]
name = "test-logger"
version = "0.1.0"
authors = ["Phil Fried <philipsfried@gmail.com>"]

description = "Simple helper to initialize env_logger before unit and integration tests. Works on stable rust."
documentation = "https://github.com/psFried/test-logger"
homepage = "https://github.com/psFried/test-logger"
repository = "https://github.com/psFried/test-logger"
readme = "README.md"
keywords = ["logging", "log", "env_logger", "tests", "testing"]
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "~0.3"

[dev-dependencies]
log = "~0.3"

